--- a/db-connectivity-in-csharp/db-connectivity-in-csharp.csproj
+++ b/db-connectivity-in-csharp/db-connectivity-in-csharp.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContactDataAccessClass.cs" />
+    <Compile Include="ParameterizedQueryClass.cs" />
+    <Compile Include="ParameterizedQueryWithLikeClass.cs" />
+    <Compile Include="PrintAllContacts.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RetrieveASingleValueClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
